--- a/src/client/app/assets/styles/_layout.scss
+++ b/src/client/app/assets/styles/_layout.scss
@@ -1,3 +1,12 @@
 .layout-container {
   min-height: 100vh;
 }
+
+.layout-header {
+  display: flex;
+  align-items: center;
+}
+
+.layout-inner-wrapper {
+  padding: 0 24px 24px;
+}
