Added user courses and subscribed topics info on home page

--- a/src/client/app/assets/styles/index.scss
+++ b/src/client/app/assets/styles/index.scss
@@ -1,6 +1,8 @@
-@use 'breadcrumb.scss';
+@use '_breadcrumb.scss';
+@use '_card.scss';
 @use '_layout.scss';
 
+@use 'pages/_home.scss';
 @use 'pages/_login.scss';
 
 html,
