--- a/src/client/app/assets/styles/pages/_home.scss
+++ b/src/client/app/assets/styles/pages/_home.scss
@@ -1,5 +1,5 @@
 .home-content-wrapper {
   display: flex;
-  flex-direction: column;
-  row-gap: 10px;
+  flex-direction: row;
+  column-gap: 20px;
 }
